--- a/_sass/initialize.scss
+++ b/_sass/initialize.scss
@@ -1,1 +1,12 @@
 @charset "utf-8";
+
+$theme-color-light: #eaeaf1;
+$theme-color-medium: #a7b7c9;
+$theme-color-dark: #4a4e69;
+$theme-color-accent: #262627;
+$theme-color-accent-text: #eaeaf1;
+$theme-color-accent-link: #b6b6f8;
+$color-text: #22223b;
+$color-link: #6060ad;
+$color-link-hover: #8a8af5;
+$color-link-visited: #363661;
