--- a/_sass/initialize.scss
+++ b/_sass/initialize.scss
@@ -6,6 +6,7 @@ $theme-color-dark: #4a4e69;
 $theme-color-accent: #262627;
 $theme-color-accent-text: #eaeaf1;
 $theme-color-accent-link: #b6b6f8;
+$theme-color-accent-link-hover: #8a8af5;
 $color-text: #22223b;
 $color-link: #6060ad;
 $color-link-hover: #8a8af5;
