--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,5 @@
       </div>    
     </div>      
     <p class="social"><a href="https://www.linkedin.com/in/janisbruzans/">LinkedIn</a> | <a href="https://github.com/exploringintent">GitHub</a></p>      
+    <p class="copyright">© Copyright 2024 Janis Bruzans</p>
 </footer>
