--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,17 @@
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>exploringintent - looking for the stories that shape things</title>
+    <meta name="description" content="exploringintent - looking for the stories that shape things">
+    <meta name="author" content="Janis Bruzans">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KJR7S2SS');</script>
+<!-- End Google Tag Manager -->
     {%- seo -%}
     <link rel="stylesheet" href="{{ "assets/modern-normalize.min.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
