--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,25 +1,58 @@
-
 body{
     background-color: $theme-color-light;   
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: $color-text;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+
+.site-header{
+    .site-title {
+        font-size: 2em;
+        font-weight: bold;
+        text-decoration: none;
+        color: $theme-color-accent-text;   
+    }
+
+    p {
+        display:inline-block;
+        margin-left: 1em;
+        font-size: 0.9em;
+        color: $theme-color-accent-text;   
+    }
+}
+
 header{
     padding: 1em;
     border-bottom: 1px solid $theme-color-dark;
     background-color: $theme-color-accent;       
 }
 
+a {
+    color: $color-link;
+    text-decoration: underline;    
+}
+
+a:hover {
+    color: $color-link-hover;
+}
+
+a:visited {
+    color: $color-link-visited;
+}
+
 nav {
     padding: 0.7em;
     border-bottom: 1px solid $theme-color-dark;
     background-color: $theme-color-accent;
-    text-align: center;
 
     a {
         display: inline-block;
         color: $theme-color-accent-link;
         text-decoration: underline;
-        padding-left: 4em;
-        padding-right: 4em;
+        padding-left: 1em;
+        padding-right: 1em;
     }
 
     a:hover {
@@ -37,16 +70,21 @@ main{
 }
 
 footer{
+    margin-top: auto;
     background-color: $theme-color-accent;
     color: $theme-color-accent-text;
     padding: 1em;
     border-top: 1px solid $theme-color-dark;
 
     .author{
+
+        text-align: center;
+
         img {
             display: inline-block;
             height: 100px;
             border-radius: 50px;
+            margin-left: 1em;
         }
 
         .author-name {
@@ -54,6 +92,7 @@ footer{
             width: 50%;
             vertical-align: top;
             margin-left: 1em;
+            text-align: justify;
 
             p {
                 margin-block: 0;
@@ -62,10 +101,11 @@ footer{
         }
     }
     
-    .disclaimer, .social{        
+    .disclaimer, .social, .copyright {        
         text-align: center;
-        position: relative
-    }   
+        position: relative;
+        margin-top: 0;
+    }     
     
     a {
         color: $theme-color-accent-link;
@@ -74,6 +114,12 @@ footer{
 
     a:visited {
         color: $theme-color-accent-link;
+    }
+
+    .copyright {
+        font-size: 0.8em;
+        color: $theme-color-medium;
+        margin:0
     }
 }
 
@@ -85,12 +131,12 @@ footer{
     li{
         margin: 0;
         padding: 0;
-        padding: 1em;
+        padding: 0.5em;
         box-sizing: border-box;
 
         h3{
             margin: 0;
-            font-size: 1.5em;
+            font-size: 1.3em;
             font-weight: bold;
             text-decoration: none;
             color: $theme-color-accent-text;   
@@ -129,4 +175,3 @@ article{
         margin-top: -1em;
     }
 }
-
