Added article about Estimation

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">    
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>exploringintent - looking for the stories that shape things</title>
-    <meta name="description" content="exploringintent - looking for the stories that shape things">
+    <title>exploringintent - looking for stories that shape things</title>
+    <meta name="description" content="exploringintent - looking for stories that shape things">
     <meta name="author" content="Janis Bruzans">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VP65TRG8H6"></script>
