Removing subscribe option as it currently is not working

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="author-name">
         <p>{{ site.author.name | escape }}</p>
         <hr> Technical architect and problem solver. Always curious and looking for the stories that shape things and capturing moments worth remembering.
-        <a href="{{ site.feed.path | default: 'feed.xml' | absolute_url }}" ><span>Subscribe</span></a> 
+        <!--<a href="{{ site.feed.path | default: 'feed.xml' | absolute_url }}" ><span>Subscribe</span></a> -->
       </div>    
     </div>      
     <p class="social"><a href="https://www.linkedin.com/in/janisbruzans/">LinkedIn</a> | <a href="https://github.com/exploringintent">GitHub</a></p>      
