Centered post header and updated embedded videos

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -152,6 +152,7 @@ article{
     .post-header{
         margin: 0;
         font-size: 1.5em;
+        text-align: center;
 
         h1 {
             margin: 0;
