Fixed layout for video embeddings

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,6 +175,12 @@ article{
     ul{
         margin-top: -1em;
     }
+
+    iframe {
+        display: block;
+        margin: 0 auto;
+        max-width: 100%;
+    }
 }
 
 .post-content {
