Added mastodon markings

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,4 +11,5 @@
     </div>      
     <p class="social"><a href="https://www.linkedin.com/in/janisbruzans/">LinkedIn</a> | <a href="https://github.com/exploringintent">GitHub</a></p>      
     <p class="copyright">© Copyright 2024 Janis Bruzans</p>
+    <a rel="me" href="https://mastodon.world/@janisbruzans" style="display:none;">Mastodon</a>
 </footer>
