--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
     <title>exploringintent - looking for stories that shape things</title>
     <meta name="description" content="exploringintent - looking for stories that shape things">
     <meta name="author" content="Janis Bruzans">
+    <meta name="fediverse:creator" content="@janisbruzans@mastodon.world">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VP65TRG8H6"></script>
 <script>
