Updated design scheme and added logo

--- a/_sass/initialize.scss
+++ b/_sass/initialize.scss
@@ -1,13 +1,15 @@
 @charset "utf-8";
 
-$theme-color-light: #eaeaf1;
-$theme-color-medium: #a7b7c9;
-$theme-color-dark: #4a4e69;
-$theme-color-accent: #262627;
-$theme-color-accent-text: #eaeaf1;
-$theme-color-accent-link: #b6b6f8;
-$theme-color-accent-link-hover: #8a8af5;
-$color-text: #22223b;
-$color-link: #6060ad;
-$color-link-hover: #8a8af5;
-$color-link-visited: #363661;
+// Synthwave Color Scheme
+$theme-color-light: #fbe7f8;           
+$theme-color-medium: #2d1b69;          
+$theme-color-dark: #38004b;            
+$theme-color-accent: #6c20b2;          
+$theme-color-accent-text: #fecb71;     
+$theme-color-accent-link:  #8fcafb;
+$theme-color-accent-link-hover: #00ffd2; 
+$color-text: #f4eee4;                  
+$color-link: #8fcafb;                  
+$color-link-hover: #00ffd2;            
+$color-link-visited: #8b5cf6;          
+$color-divider: #393b6c
