--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,14 @@
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
-  <p class="disclaimer">Disclaimer: The opinions expressed herein are my own personal opinions and do not represent my employer's view in any way.</p>  
   <div class="author">
-      <img class="author-photo" src="/assets/images/1681561203451.jpeg" alt="{{ site.author.name | escape }}">
-      <div class="author-name">
-        <p>{{ site.author.name | escape }}</p>
-        <hr> Technical architect and problem solver. Always curious and looking for the stories that shape things and capturing moments worth remembering.
-        <!--<a href="{{ site.feed.path | default: 'feed.xml' | absolute_url }}" ><span>Subscribe</span></a> -->
+    <img class="author-photo" src="/assets/images/1681561203451.jpeg" alt="{{ site.author.name | escape }}">
+    <div class="author-name">
+      <p>{{ site.author.name | escape }}</p>
+      <p>Technical architect and problem solver. Always curious and looking for the stories that shape things and capturing moments worth remembering.</p>
+      <hr/>
+      <p class="disclaimer">Disclaimer: The opinions expressed herein are my own personal opinions and do not represent my employer's view in any way.</p>  
+      <hr/>
+      <!--<a href="{{ site.feed.path | default: 'feed.xml' | absolute_url }}" ><span>Subscribe</span></a> -->
       </div>    
     </div>      
     <p class="social"><a href="https://www.linkedin.com/in/janisbruzans/">LinkedIn</a> | <a href="https://github.com/exploringintent">GitHub</a></p>      
