--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,10 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <img src="{{ '/assets/images/ei.jpg' | relative_url }}" alt="{{ site.title }}" class="site-logo">
+      {{site.title| escape }}
+    </a>
     <p>{{ site.description | escape }}</p>   
        
   </div>
