--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,12 @@
 body{
-    background-color: $theme-color-light;   
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-image: linear-gradient(to bottom, #2a2139 75%, #34294f);
+    background-size: auto auto;
+    background-position: top;
+    background-repeat: no-repeat;
+    font-family: "Fira Code", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
     color: $color-text;
     min-height: 100vh;
     display: flex;
@@ -12,30 +18,52 @@ body{
         font-size: 2em;
         font-weight: bold;
         text-decoration: none;
-        color: $theme-color-accent-text;   
+        color: $theme-color-accent-text;
+        display: flex;
+        align-items: center;
+        
+        .site-logo {
+            height: 40px;
+            width: 40px;
+            margin-right: 0.2em;
+            border-radius: 4px;
+            object-fit: cover;
+        }
+    }
+
+    a {
+        border-bottom: none;
+    }
+
+    a:hover {
+        border-bottom: none;
     }
 
     p {
         display:inline-block;
-        margin-left: 1em;
         font-size: 0.9em;
         color: $theme-color-accent-text;   
     }
 }
 
 header{
-    padding: 1em;
-    border-bottom: 1px solid $theme-color-dark;
-    background-color: $theme-color-accent;       
+    padding: 0.8em;
+    border-bottom: 4px solid $color-divider;
+    background: linear-gradient(90deg, #150b37 0%, #2d1b69 100%);
 }
 
 a {
     color: $color-link;
-    text-decoration: underline;    
+    text-decoration: none;
+    text-shadow: 0 0 5px rgba(0, 245, 255, 0.3);
+    transition: all 0.2s ease;
+    border-bottom: 2px solid $color-divider;
 }
 
 a:hover {
     color: $color-link-hover;
+    text-shadow: 0 0 10px rgba(103, 29, 243, 0.96);
+    border-bottom: 1px solid $color-link-hover;
 }
 
 a:visited {
@@ -44,19 +72,25 @@ a:visited {
 
 nav {
     padding: 0.7em;
-    border-bottom: 1px solid $theme-color-dark;
-    background-color: $theme-color-accent;
+    border-bottom: 2px solid $color-divider;
+    background: linear-gradient(90deg, #150b37 0%, #2d1b69 100%);
+    box-shadow: 0 2px 5px rgba(75, 151, 252, 0.3);
 
     a {
         display: inline-block;
         color: $theme-color-accent-link;
-        text-decoration: underline;
+        text-decoration: none;
         padding-left: 1em;
         padding-right: 1em;
+        text-shadow: 0 0 5px rgba(0, 245, 255, 0.5);
+        transition: all 0.3s ease;
+        border-bottom: 2px solid transparent;
     }
 
     a:hover {
-        color: $theme-color-accent-link-hover;                   
+        color: $theme-color-accent-link-hover;
+        text-shadow: 0 0 10px rgba(103, 29, 243, 0.96);
+        border-bottom: 1px solid $color-link-hover;
     }
 
     a:visited {
@@ -65,16 +99,23 @@ nav {
 }
 
 main{
-    background-color: $theme-color-light;
-    box-sizing: content-box;   
+    background-color: transparent;
+    box-sizing: content-box;
+}
+
+.post-header{
+    padding:0.2em;
+    box-shadow: 0 2px 10px rgba(75, 151, 252, 0.3);
 }
 
 footer{
     margin-top: auto;
-    background-color: $theme-color-accent;
+    font-size: 0.9em;
+    background: linear-gradient(90deg, #150b37 0%, #2d1b69 100%);
     color: $theme-color-accent-text;
     padding: 1em;
-    border-top: 1px solid $theme-color-dark;
+    border-top: 2px solid $color-divider;
+    box-shadow: 0 -2px 10px rgba(75, 151, 252, 0.3);
 
     .author{
 
@@ -85,6 +126,8 @@ footer{
             height: 100px;
             border-radius: 50px;
             margin-left: 1em;
+            box-shadow: 0 0 10px rgba(103, 29, 243, 0.5);
+            opacity: 0.8;
         }
 
         .author-name {
@@ -92,16 +135,23 @@ footer{
             width: 50%;
             vertical-align: top;
             margin-left: 1em;
-            text-align: justify;
+            text-align: left;
 
             p {
                 margin-block: 0;
                 font-size: 1.2em;
             }
+
+            .disclaimer {
+                font-size: 0.7em;
+                color: $theme-color-accent-text;
+                opacity: 0.9;
+                margin: 0;
+            }
         }
     }
     
-    .disclaimer, .social, .copyright {        
+    .social, .copyright {        
         text-align: center;
         position: relative;
         margin-top: 0;
@@ -109,7 +159,6 @@ footer{
     
     a {
         color: $theme-color-accent-link;
-        text-decoration: underline;  
     }
 
     a:visited {
@@ -118,7 +167,7 @@ footer{
 
     .copyright {
         font-size: 0.8em;
-        color: $theme-color-medium;
+        color: $theme-color-accent-text;
         margin:0
     }
 }
